src/funcs1.h

void end(apf::Mesh* m, apf::MeshIterator* it);
int getDimension(apf::Mesh* m);
// mesh adaptation functions

extern IsotropicFunctionJ* createIsoFunc(apf::Mesh* m, apf::Field* f);
extern void deleteIsoFunc(IsotropicFunctionJ* isofunc);
extern ma::SolutionTransfers* createSolutionTransfers();
extern void deleteSolutionTransfers(ma::SolutionTransfers* soltrans);
extern void addSolutionTransfer(ma::SolutionTransfers* soltrans, apf::Field* f);
extern ma::Input* configureMAInput(apf::Mesh2* m, IsotropicFunctionJ* isofunc, 
                            ma::SolutionTransfer* soltrans);
extern void runMA(ma::Input* in);
extern void getAvgElementSize(apf::Mesh* m, apf::Numbering* el_N, double* el_sizes);
// apf::Field functions (needed for automagical solution transfer)
apf::Field* createPackedField(apf::Mesh* m, char* fieldname, int numcomponents, apf::FieldShape* fshape);
void setComponents(apf::Field* f, apf::MeshEntity* e, int node,  double const components[]);
void getComponents(apf::Field* f, apf::MeshEntity*e, int node, double components[]);
void zeroField(apf::Field* f);
apf::Mesh* getFieldMesh(apf::Field* f);
void reduceField(apf::Field* f, apf::Sharing* shr, int reduce_op);
apf::Field* getCoordinateField(apf::Mesh* m_ptr);
apf::Field* findField(apf::Mesh* m, char* fieldname);
int countFields(apf::Mesh* m);
apf::Field* getField(apf::Mesh*m, int i);
void destroyField(apf::Field* f);
void destroyFields(apf::Mesh* m, apf::Field* save_n[], int n_save);