src/apf.jl


   Arguments:
   m_ptr: mesh pointer
   ndof: total number of degrees of freedom to be labelled (exlucding any
         fixed dofs not to be given a number)
   comp: number of dofs per node
   node_statusNumbering: :Numbering* that tells what the status of a dof
                         is.  If the value for a dof >= 2, then it gets 
			 labelled.  Must have ncomp components per node.
                         If C_NULL, all dofs will be numbered.
  nodeNums:  an already created :Numbering* that the dof numbers are
             written to. Its :Fieldshape must be the same as the mesh.
	     The numbering is 1-based.  Any dof with status < 2 will be given
	     the number zero.

  elNums: an already created :Numbering* that the element numbers are 
          written to.  If C_NULL, this numbering will not be used.
  start_coords: coordinates of a point. The mesh vertex classified on a model
         vertex closest to this point is used as the starting entity for the 
	 reordering.  Note that the reordering algorithm assigns dof numbers
	 in reverse order (ie. high to low rather than low to high).  Array
         of length m->getDimension()

"""->
function reorder(m_ptr, ndof::Integer, ncomp::Integer, node_statusN_ptr,
                 nodeNums, elNums, start_coords::Vector{Cdouble})

  @assert length(start_coords) == 3
  ccall( (reorder_name, pumi_libname), Void, (Ptr{Void}, Int32, Int32, Ptr{Void}, Ptr{Void}, Ptr{Void}, Ptr{Cdouble}),  m_ptr, ndof,  ncomp, node_statusN_ptr, nodeNums, elNums, start_coords)

  return nothing

end


"""
  This function populates the `xiNums` apf::Numbering with the numbering of
  the geometric degrees of freedom. The number of degrees of freedom a 
  MeshEntity has is exactly equal to the dimension of the geometry entity it
  is classified on.  Therefore, a mesh vertex classified on a geometric vertex
  has zero degrees of freedom, while a vertex classified on a geometric edge
  has one.  This effectively constrains the MeshEntity to remain on the
  geometric entity it is classified on.  Any unused entries in the `xiNums`
  have value `numXiDof + 1`.

  **Inputs**

   * m_ptr: apf::Mesh*
   * xiNums: apf::Numbering* to be written to
   * start_coords: the MeshEntity closest to this these coordinates will be
                   used to start the numbering process.  Note that reverse
                   numbering is performed, so this mesh entity will have the
                   highest dof number.  This array must be of length 3, even in
                   2D.
  **Outputs**

   * numXiDof: the number of geometric degrees of freedom
"""
function reorderXi(m_ptr::Ptr{Void}, xiNums::Ptr{Void},
                   start_coords::Vector{Cdouble})

  @assert length(start_coords) == 3

  val = ccall( (reorderXi_name, pumi_libname), Cint, (Ptr{Void}, Ptr{Void},
          Ptr{Cdouble}), m_ptr, xiNums, start_coords)

  return val
end

#------------------------------------------------------------------------------
# mesh adapation functions

"""
  Create an [`IsoFuncJ`](@ref)

  **Inputs**

   * m_ptr: an :Mesh2*
   * f: an :Field* specifying the desired mesh size at each coordinate
        node of mesh (note: coordinate node, not solution node)
"""
function createIsoFunc(m_ptr::Ptr{Void}, f::Ptr{Void})

  ptr = ccall( (createIsoFunc_name, pumi_libname), Ptr{Void}, (Ptr{Void}, Ptr{Void}), m_ptr, f)

  return IsoFuncJ(ptr)
end

"""
  Free an [`IsoFuncj`](@ref)

  **Inputs**

   * func: an IsoFuncJ

  **Outputs**

    none
"""
function deleteIsoFunc(func::IsoFuncJ)

  ccall( (deleteIsoFunc_name, pumi_libname), Void, (IsoFuncJ,), func)

  return nothing
end

"""
  Create an object that manages the transfer of fields from the original
  mesh to the adapted mesh.  Use [`addSolutionTransfer`](@ref) to add
  fields to be transfered one by one.

  **Inputs**

    * none

  **Outputs**

   * a [`SolutionTransfers`](@ref)
"""
function createSolutionTransfers()

  ptr = ccall( (createSolutionTransfers_name, pumi_libname), Ptr{Void}, () )

  return SolutionTransfers(ptr)
end

"""
  Frees a [`SolutionTransfers`](@ref) object.

  **Inputs**

   * soltrans: the object to be deleted

  **Outputs**

   * none

  **Implementation Notes**

   This actually deletes the `SolutionTransfers` object as well as all the
   `SolutionTransfer` object inside of it.  Currently the individual
   `SolutionTransfer` objects are not exposed to Julia, so this is a
   non-issue.
"""
function deleteSolutionTransfers(soltrans::SolutionTransfers)

  ccall( (deleteSolutionTransfers_name, pumi_libname), Void, (SolutionTransfers,), soltrans)

  return nothing
end

"""
  Add an :Field* to be transferred to the new mesh

  **Inputs**

   * soltrans: the [`SolutionTransfers`](@ref) object
   * f: the :Field*

  **Outputs**

   none
"""
function addSolutionTransfer(soltrans::SolutionTransfers, f::Ptr{Void})

  ccall( (addSolutionTransfer_name, pumi_libname), Void, (SolutionTransfers, Ptr{Void}), soltrans, f)

  return nothing
end

"""
  Create the input configuration object for MeshAdapt

  **Inputs**

   * m_ptr: an :Mesh2*
   * isofunc: an [`IsoFuncJ`](@ref)
   * soltrans: a [`SolutionTransfers`](@ref)

  **Outputs**

   * an [`MAInput`](@ref)
"""
function configureMAInput(m_ptr::Ptr{Void}, isofunc::IsoFuncJ, soltrans::SolutionTransfers)

  ptr = ccall( (configureMAInput_name, pumi_libname), Ptr{Void},
               (Ptr{Void}, IsoFuncJ, SolutionTransfers), m_ptr, isofunc, soltrans)

  return MAInput(ptr)
end

"""
  Run MeshAdapt

  **Inputs**

   * input: an [`MAInput](@ref)

  **Outputs**

   none
"""
function runMA(input::MAInput)

  ccall( (runMA_name, pumi_libname), Void, (MAInput,), input)

  return nothing
end

"""
  Gets the average size of each element (ie. the average edge length)

  **Inputs**

   * m_ptr: :Mesh*
   * el_N: an :Numbering* for the elements

  **Inputs/Outputs**

   * el_sizes: vector to be overwritten with the average size of each element
"""
function getAvgElementSize(m_ptr::Ptr{Void}, el_N::Ptr{Void}, el_sizes::AbstractVector{Cdouble})

  ccall( (getAvgElementSize_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Ptr{Cdouble}), m_ptr, el_N, el_sizes)

  return nothing
end

#------------------------------------------------------------------------------
# :Field related function
# needed for automagical solution transfer

function createPackedField(m_ptr, fieldname::AbstractString, numcomponents::Integer, fshape=C_NULL)
# create a field with the specified number of componenets per node
# returns a pointer to the field

  f_ptr = ccall((createPackedField_name, pumi_libname), Ptr{Void}, (Ptr{Void}, Ptr{UInt8}, Int32, Ptr{Void}), m_ptr, fieldname, numcomponents, fshape)

  return f_ptr
end

function setComponents(f_ptr, entity_ptr, node::Integer, components::AbstractVector)
  ccall((setComponents_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Int32, Ptr{Float64}), f_ptr, entity_ptr, node, components)

  return nothing
end

function getComponents(f_ptr, entity_ptr, node::Integer, components::AbstractVector)

  ccall( (getComponents_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Int32, Ptr{Float64}), f_ptr, entity_ptr, node, components)

  return nothing
end

function zeroField(f_ptr)
  ccall( (zeroField_name, pumi_libname), Void, (Ptr{Void},), f_ptr)
end

function getFieldMesh(f_ptr::Ptr{Void})
# get the mesh a numbering is defined on

  m_ptr = ccall( (:getFieldMesh, pumi_libname), Ptr{Void}, (Ptr{Void},), f_ptr)
  return m_ptr
end



"""
  Apply a reduction operation along the partition boundaries of a Field
  to make the field globally consistent.  The field must have values
  written to it by all processes before this function is applied.

  **Inputs**

   * f_ptr: :Field*
   * shr_ptr:: :Sharing*
   * reduce_op: 0 = sum, 1 = min, 2 = max
"""
function reduceField(f_ptr::Ptr{Void}, shr_ptr::Ptr{Void}, reduce_op::Integer)

  ccall( (reduceField_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Cint), f_ptr, shr_ptr, reduce_op)

end

function getCoordinateField(m_ptr::Ptr{Void})

  ccall( (getCoordinateField_name, pumi_libname), Ptr{Void}, (Ptr{Void},), m_ptr)
end

function findField(m_ptr::Ptr{Void}, fieldname::String)

  f_ptr = ccall( (findField_name, pumi_libname), Ptr{Void}, (Ptr{Void}, Cstring), m_ptr, fieldname)

  return f_ptr
end

function countFields(m_ptr::Ptr{Void})

  n = ccall( (:countFields, pumi_libname), Cint, (Ptr{Void},), m_ptr)

  return n
end

function getField(m_ptr::Ptr{Void}, i::Integer)

  f_ptr = ccall( (:getField, pumi_libname), Ptr{Void}, (Ptr{Void}, Cint), m_ptr, i)

  return f_ptr
end



function destroyField(f_ptr::Ptr{Void})

  ccall( (destroyField_name, pumi_libname), Void, (Ptr{Void},), f_ptr)

  return nothing
end

"""
  Destroys all :Fields associated with a given mesh, except
  those specified

  **Inputs**

   * m_ptr: :Mesh*
   * n_save: array of :Field* objects to not destroy (optional)
"""
function destroyFields(m_ptr::Ptr{Void}, n_save=Array{Ptr{Void}}(0))

  ccall( (destroyFields_name, pumi_libname), Void, (Ptr{Void}, Ptr{Ptr{Void}}, Cint), m_ptr, n_save, length(n_save))

  return nothing
end


@doc """
###PumiInterface.createSubMesh

  This function takes in a (presumable high order) mesh, subtriangulates 
  each element into a set of linear triangles, writes a vtk file with the
  name newmesh_linear, and returns a :Mesh2* pointer as a Void pointer.
  Note that Pumi is fully capabable of having multiple meshes loaded at one
  time (although only one of them can reference geometry).  The Julia 
  interface to Pumi does not always handle multiple meshes correctly.  In
  general, any function that takes in a mesh pointer will work correctly,
  but some of the ones that do not take in a mesh pointer will not.  This
  deficiency needs to be corrected eventually.

  It is useful to note that vertices of the original mesh that are also
  vertices of the new mesh will have the same number assigned to them by
  Pumi.  This makes it easier to compare ParaView images of the meshes
  side-by-side.

  Argument:
    m_ptr : pointer to existing mesh
    triangulation : n x 3 array of Int32s that tell which nodes of an existing
                    element should be used as the vertices of each subtriangle,
		    where n is the number of subtriangles.  These should be
		    1-based indices, with values in the range 1 to number of
		    nodes per element
    elementNodeOffsets:  array of UInt8s, dimensions number of nodes per element 
                         by number of elements in the mesh, used to figure out
			 how each element should access the nodes of a mesh 
			 entity.  See PdePumiInterface for details.
    typeOffsetsPerElement: array of Int32s, of length 4, where entry i
                           tells where the nodes on entities of dimension
			   i start in an array of all the nodes of an element.
			   The last element should be the number of nodes on 
			   an element + 1
    numberings:  array of length 3 containings numbers of all the verts, edges
                 and faces in the mesh m_ptr.

  Outputs:
    mnew_ptr : pointer to the new mesh
"""->
function createSubMesh(m_ptr, triangulation::AbstractArray{Int32, 2}, elementNodeOffsets::AbstractArray{UInt8, 2}, typeOffsetsPerElement::AbstractArray{Int32, 1}, numberings::AbstractArray{Ptr{Void}, 1})

  # check the the triangulation array is oriented correctly
  @assert size(triangulation, 1) == 3
  
 mnew_ptr =  ccall( (createSubMesh_name, pumi_libname), Ptr{Void}, (Ptr{Void}, Int32, Ptr{Int32}, Ptr{UInt8}, Ptr{Int32}, Ptr{Ptr{Void}}), m_ptr, size(triangulation, 2), triangulation, elementNodeOffsets, typeOffsetsPerElement, numberings)

 return mnew_ptr
end


# DG version of the above functions
